# KalaPhysics

./: .gitignore  CHANGES.txt  CMakeLists.txt  Linux_prerequisites.txt  README.md  Windows_prerequisites.txt  build_all_windows.bat  build_linux_debug.sh  build_linux_release.sh  build_windows_debug.bat  build_windows_release.bat  engine_linux.sh  engine_windows.bat  manifest.kmf  mf_linux.kmf  mf_win.kmf  project.kmake
docs/: colliders.md  external_libraries.md  goals.txt
include/: physicsworld.hpp  rigidbody.hpp
include/collision/: collisiondetection.hpp  contactgenerator.hpp
include/core/: kp_core.hpp  kp_physics_world.hpp  physicsworld.hpp  rigidbody.hpp  stepsimulation.hpp
include/physics/: kp_collider.hpp  kp_delayed_ray.hpp  kp_ray.hpp  kp_rigidbody.hpp
include/physics/collision/: kp_collider.hpp  kp_collider_aabb.hpp  kp_collider_bch.hpp  kp_collider_bcp.hpp  kp_collider_bsp.hpp  kp_collider_kdop.hpp  kp_collider_obb.hpp
include/shape/: boxcollider.hpp  collider.hpp  spherecollider.hpp
include/simulation/: contactsolver.hpp  frictionsolver.hpp
src/: collider.cpp  collisiondetection.cpp  gameobjecthandle.cpp  physicsworld.cpp  rigidbody.cpp
src/collision/: collider.cpp  collisiondetection.cpp  contactgenerator.cpp  faceclipping.cpp  manifold.cpp  sat.cpp
src/core/: kp_core.cpp  kp_physics_world.cpp  physicsworld.cpp  rigidbody.cpp  stemsimulation.cpp
src/physics/: kp_collider.cpp  kp_delayed_ray.cpp  kp_ray.cpp  kp_rigidbody.cpp
src/physics/collision/: kp_collider.cpp  kp_collider_aabb.cpp  kp_collider_bch.cpp  kp_collider_bcp.cpp  kp_collider_bsp.cpp  kp_collider_kdop.cpp  kp_collider_obb.cpp
src/shape/: boxcollider.cpp  collider.cpp  spherecollider.cpp
src/simulation/: contactsolver.cpp  frictionsolver.cpp  handlemotion.cpp  stemsimulation.cpp
